Bug 1520737 - Ensure UID property is persistent for mailing list cards; r=mkmelin